--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "@angular/compiler-cli": "^19.0.0",
     "@types/jasmine": "~5.1.0",
     "@types/leaflet": "^1.9.14",
+    "daisyui": "^4.12.14",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "tailwindcss": "^3.4.15",
     "typescript": "~5.6.2"
   }
 }
